# HUSTRM

./: CMakeLists.txt  README.md  armorDetector.cpp  armorDetector.h  boost.xml  main.cpp  main.h  pn3.avi  run.sh  svm2.xml  svm_large.xml  svm_numbers.xml  svm_small.xml
armor/: CMakeLists.txt
armor/inc/: ArmorScore.h  LightBarScore.h  RM_BUFF.h  armor.h  buff.h  lightBar.h  node.h  score.h
armor/src/: ArmorScore.cpp  LightBarScore.cpp  RM_BUFF.cpp  armor.cpp  buff.cpp  lightBar.cpp  score.cpp
config/: HIK.mcfg  armorDetector.json  armorDetector_large.json  new_Buff_cfg.yml
data/: Blue_1.avi  armor_feature.txt  armor_feature_large.txt  armor_feature_small.txt
data/large_armor/: Blue_1.avi  Red_1.avi
data/pic_red/: mark.txt  rename.py
driver/camera/: CMakeLists.txt
driver/camera/inc/: DAHEN_camera.h  GxCamera.h  HIK_camera.h  camera.h
driver/camera/src/: DAHEN_camera.cpp  GxCamera.cpp  HIK_camera.cpp  camera.cpp
driver/serialPort/: CMakeLists.txt
driver/serialPort/inc/: serialPort.h
driver/serialPort/src/: serialPort.cpp
model/: small.xml
solvePNP/: CMakeLists.txt
solvePNP/inc/: KalmanFilter.h  solvePNP.h  table.h  transform.h
solvePNP/src/: KalmanFilter.cpp  solvePNP.cpp  transform.cpp
thread/: CMakeLists.txt
thread/inc/: LockFreeQueue.hpp  SharedData.h  armorThread.h  cameraThread.h  lightBarThread.h  preProcessThread.h  serialPortReadThread.h  serialPortWriteThread.h  thread.h
thread/src/: SharedData.cpp  armorThread.cpp  cameraThread.cpp  lightBarThread.cpp  preProcessThread.cpp  serialPortReadThread.cpp  serialPortWriteThread.cpp  thread.cpp
tool/: CMakeLists.txt
tool/inc/: tool_Drawcurve.h  tool_config.h  tool_log.h  tool_time.h  tools.h
tool/src/: tool_Drawcurve.cpp  tool_config.cpp  tool_log.cpp  tool_time.cpp
video/: 1.txt  2.txt  RT.txt  armorcost.txt  serialwrite.txt  time_H.txt  time_NOROI.txt  time_NOROI1.txt  time_pnp.txt  time_pnp1.txt
video/video_/pic/blue/: rename.sh
